--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run build:ssr",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run ak-dev-studio:serve-ssr",
     "serve:ssr": "node dist/ak-dev-studio/server/main.js",
     "build:ssr": "ng build && ng run ak-dev-studio:server",
-    "prerender": "ng run ak-dev-studio:prerender",
-    "vercel-build": "npm run build:ssr"
+    "prerender": "ng run ak-dev-studio:prerender"
   },
   "private": true,
   "dependencies": {
