--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:ssr": "ng run ak-dev-studio:serve-ssr",
     "serve:ssr": "node dist/ak-dev-studio/server/main.js",
     "build:ssr": "ng build && ng run ak-dev-studio:server",
-    "prerender": "ng run ak-dev-studio:prerender"
+    "prerender": "ng run ak-dev-studio:prerender",
+    "vercel-build": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
