--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,12 +2,11 @@
     "extends": "./tsconfig.app.json",
     "compilerOptions": {
       "outDir": "./out-tsc/server",
-      "types": [
-        "node"
-      ]
+      "module": "commonjs",
+      "types": ["node"]
     },
-    "files": [
-      "src/main.server.ts",
-      "server.ts"
-    ]
+    "files": ["src/main.server.ts", "server.ts"],
+    "angularCompilerOptions": {
+      "entryModule": "./src/app/app.server.module#AppServerModule"
+    }
   }
