--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": { "buildCommand": "npm run build:ssr" }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/ak-dev-studio/server/main.js"
-    }
-  ]
+  "version": 2
 }
