--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
+  "version": 2,
+   "rewrites": [
+    {
+      "source": "/moviepicker/:path*",
+      "destination": "https://movie-picker-chi.vercel.app/:path*"
+    }
+  ]
 }
