--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.8",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "glob": "^11.0.0",
     "rimraf": "^6.0.1",
