--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/ak-dev-studio",
   "rewrites": [
     {
       "source": "/moviepicker/:path*",
