--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,7 @@
             ],
             "scripts": [],
             "browser": "src/main.ts",
-            "server": "src/main.server.ts",
-            "outputMode": "server",
+            "outputMode": "static",
             "ssr": {
               "entry": "src/server.ts"
             }
